# voxen

./: .clang-format  .gitignore  .gitmodules  .lfsconfig  CMakeLists.txt  CMakeUtils.cmake  Directory.Build.props
src/: CMakeLists.txt  main.cpp
src/client/: debug_draw_octree.cpp  gfx_runtime_config.cpp  graphics_options.cpp  gui.cpp  input_event_adapter.cpp  render.cpp  window.cpp
src/client/vulkan/: backend.cpp  base.cpp  buffer.cpp  capabilities.cpp  command_buffer.cpp  command_pool.cpp  common.cpp  config.cpp  descriptor_manager.cpp  descriptor_set_layout.cpp  device.cpp  framebuffer.cpp  image.cpp  image_view.cpp  instance.cpp  main_loop.cpp  memory.cpp  physical_device.cpp  pipeline.cpp  pipeline_cache.cpp  pipeline_layout.cpp  queue_manager.cpp  render_pass.cpp  shader.cpp  shader_module.cpp  surface.cpp  swapchain.cpp  sync.cpp  vulkan_render.cpp
src/client/vulkan/algo/: debug_octree.cpp  terrain_renderer.cpp  terrain_simple.cpp
src/client/vulkan/high/: main_loop.cpp  mesh.cpp  per_frame_resources.cpp  render_graph.cpp  render_graph_builder.cpp  render_graph_compiler.cpp  terrain_synchronizer.cpp  transfer_manager.cpp
src/common/: config.cpp  filemanager.cpp  gameview.cpp  gui.cpp  player.cpp  runtime_config.cpp  terrain.cpp  threadpool.cpp  world.cpp  world_state.cpp
src/common/assets/: png_tools.cpp
src/common/msg/: config.cpp  message.cpp  queue.cpp
src/common/terrain/: allocator.cpp  cache.cpp  chunk.cpp  chunk_data.cpp  chunk_header.cpp  chunk_id.cpp  chunk_octree.cpp  control_block.cpp  controller.cpp  controller_seam_ops.cpp  coord.cpp  generator.cpp  hermite_data.cpp  loader.cpp  primary_data.cpp  qef_solver.cpp  seam.cpp  surface.cpp  surface_builder.cpp  voxel_grid.cpp
src/extras/: futex.cpp  spinlock.cpp
src/game/: game_main.cpp  game_ui.cpp  game_ui.hpp
src/server/: world.cpp
src/shaders/: octree.frag  test.frag  test.vert
src/shaders/debug/: octree.frag  octree.vert  torus.frag  torus.vert
src/shaders/include/land/: mesh_layouts.glsl
src/shaders/include/util/: aabb.glsl  color_ops.glsl  dither.glsl  vk_structs.glsl
src/shaders/land/: chunk_mesh.vert  debug_chunk_bounds.vert  frustum_cull.comp  impostor.frag  impostor.vert  selector.frag  selector.vert
src/shaders/terrain/: frustum_cull.comp  simple.frag  simple.vert
src/shaders/ui/: font.frag  font.vert
src/tools/: CMakeLists.txt
src/tools/dev/: CMakeLists.txt  tool_fontpack.cpp  tool_uidgen.cpp
src/tools/research/: CMakeLists.txt  demo_terrain_gen.cpp
src/util/: aabb.cpp  allocator.cpp  assert.cpp  debug.cpp  elapsed_timer.cpp  error_condition.cpp  exception.cpp  file.cpp  hash.cpp  log.cpp
src/voxen/client/: main_thread_service.cpp
src/voxen/common/: pipe_memory_allocator.cpp  private_object_pool.cpp  shared_object_pool.cpp  thread_pool.cpp  threadpool.cpp  uid.cpp
src/voxen/common/land/: block.cpp  block_registry.cpp  fake_chunk_data.cpp  land.cpp  land_chunk.cpp  land_chunk_storage.cpp  land_private_consts.hpp  land_utils.cpp
src/voxen/debug/: bug_found.cpp  debug_uid_registry.cpp  thread_name.cpp  uid_registry.cpp
src/voxen/gfx/: font_atlas_blob.cpp  font_atlas_blob.hpp  font_renderer.cpp  frame_tick_source.cpp  gfx_land_loader.cpp  gfx_options.json5  gfx_system.cpp
src/voxen/gfx/ui/: ui_builder.cpp
src/voxen/gfx/vk/: async_dma.cpp  debug_utils.cpp  frame_context.cpp  legacy_render_graph.cpp  render_graph.cpp  render_graph_builder.cpp  render_graph_execution.cpp  render_graph_private.cpp  render_graph_private.hpp  vk_device.cpp  (+16 more)
src/voxen/land/: block.cpp  block_registry.cpp  chunk_ticket.cpp  compressed_chunk_storage.cpp  land.cpp  land_chunk.cpp  land_generator.cpp  land_geometry_utils_private.cpp  land_geometry_utils_private.hpp  land_private_consts.hpp  land_private_messages.hpp  land_service.cpp  land_state.cpp  land_storage_tree.cpp  land_storage_tree_node_ptr.cpp  land_storage_tree_nodes.cpp  land_storage_tree_private.hpp  private_storage_tree.cpp  pseudo_chunk_data.cpp  pseudo_chunk_surface.cpp  storage_tree_utils.cpp  storage_tree_utils_private.hpp
src/voxen/os/: file.cpp  futex.cpp  glfw_window.cpp  process.cpp  stdlib.cpp  time.cpp
src/voxen/svc/: asset_service.cpp  async_counter_tracker.cpp  async_counter_tracker.hpp  async_file_io_service.cpp  engine.cpp  file_service.cpp  message_handling.cpp  message_queue.cpp  message_sender.cpp  messaging_private.cpp  messaging_private.hpp  messaging_service.cpp  service_base.cpp  service_locator.cpp  task_builder.cpp  task_context.cpp  task_coro.cpp  task_counter_tracker.cpp  task_counter_tracker.hpp  task_handle.cpp  task_handle_private.hpp  task_queue_set.cpp  task_queue_set.hpp  task_service.cpp  task_service_slave.cpp  task_service_slave.hpp
src/voxen/util/: concentric_octahedra_walker.cpp  concentric_octahedron_walker.cpp  futex_work_counter.cpp  hash.cpp  packed_color.cpp
src/voxen/world/: world_control_service.cpp  world_sim_thread.cpp  world_sim_thread.hpp
tests/: CMakeLists.txt  test_common.cpp  test_common.hpp  voxen_test_common.hpp
tests/extras/: CMakeLists.txt  bitset.cpp  bitset.test.cpp  defer.cpp  defer.test.cpp  dyn_array.test.cpp  enum_utils.test.cpp  fixed_pool.cpp  fixed_pool.test.cpp  function_ref.cpp  function_ref.test.cpp  linear_allocator.cpp  linear_allocator.test.cpp  move_only_function.test.cpp  refcnt_ptr.cpp  refcnt_ptr.test.cpp  source_location.cpp  source_location.test.cpp
tests/voxen/: CMakeLists.txt  voxen_test_common.cpp
tests/voxen/common/: private_object_pool.test.cpp  shared_object_pool.test.cpp  v8g_flat_map.test.cpp  v8g_hash_trie.test.cpp
tests/voxen/debug/: debug_uid_registry.test.cpp  uid_registry.test.cpp
tests/voxen/land/: chunk_key.test.cpp  compressed_chunk_storage.test.cpp  cube_array.test.cpp  land_storage_tree.test.cpp  storage_tree_utils.test.cpp
tests/voxen/os/: file.test.cpp
tests/voxen/svc/: async_file_io_service.test.cpp  message_queue.test.cpp  service_locator.test.cpp  task_service.test.cpp
tests/voxen/util/: concentric_octahedra_walker.test.cpp  concentric_octahedron_walker.test.cpp  hash.test.cpp  packed_color.test.cpp
(+275 files in other folders)
